[gd_scene load_steps=8 format=3 uid="uid://ctestpivot"]

[ext_resource type="PackedScene" uid="uid://dtsmyimekx8ye" path="res://assets/characters/leet/leet.fbx" id="1_leet"]
[ext_resource type="PackedScene" uid="uid://gdrd1ws0dgap" path="res://assets/characters/gsg9/gsg9_adjusted.fbx" id="2_gsg9"]
[ext_resource type="Script" path="res://scripts/test_pivot.gd" id="3_script"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_1"]
sky_top_color = Color(0.4, 0.6, 0.9, 1)
sky_horizon_color = Color(0.7, 0.8, 0.9, 1)
ground_bottom_color = Color(0.3, 0.3, 0.3, 1)
ground_horizon_color = Color(0.5, 0.5, 0.5, 1)

[sub_resource type="Sky" id="Sky_1"]
sky_material = SubResource("ProceduralSkyMaterial_1")

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
sky = SubResource("Sky_1")
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 0.5
tonemap_mode = 2

[sub_resource type="BoxMesh" id="BoxMesh_floor"]
size = Vector3(10, 0.1, 10)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_floor"]
albedo_color = Color(0.4, 0.4, 0.4, 1)

[node name="TestCharacterPivot" type="Node3D"]
script = ExtResource("3_script")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866, 0, -0.866, 0.5, 0, 3, 5)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707, 0.5, -0.5, 0, 0.707, 0.707, 0.707, -0.5, 0.5, 5, 5, 5)
light_energy = 1.5
shadow_enabled = true

[node name="Floor" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("BoxMesh_floor")
surface_material_override/0 = SubResource("StandardMaterial3D_floor")

[node name="LeetModel" parent="." instance=ExtResource("1_leet")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -2, 0.05, 0)

[node name="Gsg9Model" parent="." instance=ExtResource("2_gsg9")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 2, 0.05, 0)

[node name="Label_Leet" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 2.5, 0)
text = "LEET
Y=0.05"
font_size = 64

[node name="Label_Gsg9" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 2.5, 0)
text = "GSG9
Y=0.05"
font_size = 64
